fix: overflow:hiddenのつけ忘れを修正

--- a/src/scss/modules/pc/load-view.scss
+++ b/src/scss/modules/pc/load-view.scss
@@ -343,6 +343,7 @@ $load-view__clover-size: 40px;
       position: absolute;
       top: 0; left: 0;
       width: 100%; height: 100%;
+      overflow: hidden;
 
       div {
         position: absolute;
